[package]
name = "conduit-app"
version = "0.1.0"
authors = ["Jet Li <jing.i.qin@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = { version = "1", optional = true }
async-std = { version = "1.5", features = ["attributes"], optional = true }
cfg-if = "0.1"
tokio = { version = "0.2", features = ["macros"], optional = true }

conduit-actix-web = { path = "../conduit-actix-web", version = "0.1.0", optional = true }
conduit-diesel = { path = "../conduit-diesel", version = "0.1.0", optional = true }
conduit-hyper = { path = "../conduit-hyper", version = "0.1.0", optional = true }
conduit-primitives = { path = "../conduit-primitives", version = "0.1.0" }
conduit-roa = { path = "../conduit-roa", version = "0.1.0", optional = true }
conduit-rweb = { path = "../conduit-rweb", version = "0.1.0", optional = true }
conduit-sqlx = { path = "../conduit-sqlx", version = "0.1.0", optional = true }
conduit-tide = { path = "../conduit-tide", version = "0.1.0", optional = true }
conduit-warp = { path = "../conduit-warp", version = "0.1.0", optional = true }

[features]
default = ["actix_web", "diesel"]
actix_web = ["conduit-actix-web", "actix-rt"]
diesel = ["conduit-diesel"]
hyper = ["conduit-hyper", "tokio"]
roa = ["conduit-roa"]
rweb = ["conduit-rweb"]
sqlx = ["conduit-sqlx"]
tide = ["conduit-tide", "async-std"]
warp = ["conduit-warp", "tokio"]



