[package]
name = "conduit-diesel"
version = "0.1.0"
authors = ["Jet Li <jing.i.qin@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conduit-primitives = { path = "../conduit-primitives", version = "0.1.0" }

chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["mysql"] }
dotenv = "0.15.0"
r2d2 = "0.8"
serde = { version= "1", features = ["derive"] }