[package]
name = "conduit-diesel"
version = "0.1.0"
authors = ["Jet Li <jing.i.qin@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conduit-primitives = { path = "../conduit-primitives", version = "0.1.0" }

anyhow = "1.0"
async-std = { version = "1.5" }
async-trait = "0.1.24"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["extras", "mysql"] }
dotenv = "0.15"
r2d2 = "0.8"
serde = { version = "1", features = ["derive"] }